--- a/local/sample-2/index.html
+++ b/local/sample-2/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="MPMP — Multi Purpose Maintenance Page" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta name="description" content="MPMP — Multi Purpose Maintenance Page"/>
 
     <!--
       ==========================================================
@@ -24,7 +24,7 @@
           stroke-linecap='round'
           stroke-linejoin='round'/>
     <circle cx='15.2' cy='7.4' r='3.5' fill='%23e54848'/>
-  </svg>" />
+  </svg>"/>
 
     <script>
         /* MPMP Settings (edit here) */
@@ -46,7 +46,7 @@
             message: "We’re doing a quick update to improve the experience. Please check back in a few minutes.",
             note: "If you need us urgently, contact: " + Config.email,
             status: "Temporary downtime",
-            footer: new Date().getFullYear() + " © " +  Config.company,
+            footer: new Date().getFullYear() + " © " + Config.company,
         };
         content.fa = {
             label: "Persian",
@@ -57,21 +57,21 @@
             message: "در حال انجام تغییرات کوتاه برای بهتر شدن تجربه هستیم. چند دقیقه دیگر دوباره سر بزنید.",
             note: "در صورت نیاز فوری: " + Config.email,
             status: "اختلال موقت",
-            footer: new Date().getFullYear() + ' © ' +Config.company,
+            footer: new Date().getFullYear() + ' © ' + Config.company,
         };
 
     </script>
     <title>MPMP</title>
     <style>
-        :root{
-            --bg1:#0b1220;
-            --bg2:#0a0f1a;
-            --card: rgba(255,255,255,.06);
-            --card2: rgba(255,255,255,.10);
-            --text: rgba(255,255,255,.92);
-            --muted: rgba(255,255,255,.70);
-            --line: rgba(255,255,255,.14);
-            --shadow: 0 10px 35px rgba(0,0,0,.35);
+        :root {
+            --bg1: #0b1220;
+            --bg2: #0a0f1a;
+            --card: rgba(255, 255, 255, .06);
+            --card2: rgba(255, 255, 255, .10);
+            --text: rgba(255, 255, 255, .92);
+            --muted: rgba(255, 255, 255, .70);
+            --line: rgba(255, 255, 255, .14);
+            --shadow: 0 10px 35px rgba(0, 0, 0, .35);
             --radius: 18px;
             --pad: 22px;
             --max: 760px;
@@ -79,134 +79,145 @@
         }
 
         /* Light mode */
-        @media (prefers-color-scheme: light){
-            :root{
-                --bg1:#f7f8fb;
-                --bg2:#eff2f9;
-                --card: rgba(0,0,0,.04);
-                --card2: rgba(0,0,0,.06);
-                --text: rgba(0,0,0,.88);
-                --muted: rgba(0,0,0,.62);
-                --line: rgba(0,0,0,.10);
-                --shadow: 0 10px 30px rgba(0,0,0,.10);
+        @media (prefers-color-scheme: light) {
+            :root {
+                --bg1: #f7f8fb;
+                --bg2: #eff2f9;
+                --card: rgba(0, 0, 0, .04);
+                --card2: rgba(0, 0, 0, .06);
+                --text: rgba(0, 0, 0, .88);
+                --muted: rgba(0, 0, 0, .62);
+                --line: rgba(0, 0, 0, .10);
+                --shadow: 0 10px 30px rgba(0, 0, 0, .10);
             }
         }
 
-        html,body{height:100%}
-        body{
-            margin:0;
+        html, body {
+            height: 100%
+        }
+
+        body {
+            margin: 0;
             font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
             color: var(--text);
-            background: radial-gradient(1200px 600px at 20% 10%, rgba(106,166,255,.18), transparent 55%),
-            radial-gradient(900px 500px at 85% 30%, rgba(141,255,194,.14), transparent 55%),
+            background: radial-gradient(1200px 600px at 20% 10%, rgba(106, 166, 255, .18), transparent 55%),
+            radial-gradient(900px 500px at 85% 30%, rgba(141, 255, 194, .14), transparent 55%),
             linear-gradient(180deg, var(--bg1), var(--bg2));
-            display:flex;
-            align-items:center;
-            justify-content:center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             padding: 26px;
             box-sizing: border-box;
         }
 
-        .wrap{
+        .wrap {
             width: min(var(--max), 100%);
         }
 
-        .card{
+        .card {
             background: linear-gradient(180deg, var(--card), transparent);
             border: 1px solid var(--line);
             border-radius: var(--radius);
             box-shadow: var(--shadow);
-            overflow:hidden;
+            overflow: hidden;
         }
 
-        .header{
+        .header {
             padding: calc(var(--pad) + 6px) var(--pad) var(--pad);
             border-bottom: 1px solid var(--line);
             position: relative;
-            background:
-                    radial-gradient(700px 220px at 10% 0%, rgba(106,166,255,.16), transparent 55%),
-                    radial-gradient(700px 220px at 90% 0%, rgba(255,153,102,.12), transparent 55%);
+            background: radial-gradient(700px 220px at 10% 0%, rgba(106, 166, 255, .16), transparent 55%),
+            radial-gradient(700px 220px at 90% 0%, rgba(255, 153, 102, .12), transparent 55%);
         }
 
-        .badge{
-            position:static;
+        .badge {
+            position: static;
             font-size: 12px;
             letter-spacing: .12em;
             text-transform: uppercase;
             padding: 8px 10px;
             border-radius: 999px;
             border: 1px solid var(--line);
-            background: rgba(0,0,0,.08);
+            background: rgba(0, 0, 0, .08);
             color: var(--muted);
-            user-select:none;
-        }
-        @media (prefers-color-scheme: light){
-            .badge{ background: rgba(255,255,255,.55); }
+            user-select: none;
         }
 
-        .topbar{
-            position:absolute;
-            top:14px;
-            left:14px;
-            right:14px;
-            display:flex;
-            align-items:center;
-            justify-content:space-between;
-            gap:10px;
-        }
-        [dir="rtl"] .topbar{direction: ltr;}
-
-
-        .lang{
-            border:1px solid var(--line);
-            border-radius:999px;
-            overflow:hidden;
-            background: rgba(0,0,0,.08);
+        @media (prefers-color-scheme: light) {
+            .badge {
+                background: rgba(255, 255, 255, .55);
+            }
         }
 
-        @media (prefers-color-scheme: light){
-            .lang{ background: rgba(255,255,255,.55); }
+        .topbar {
+            position: absolute;
+            top: 14px;
+            left: 14px;
+            right: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
         }
 
-        .lang-select{
-            appearance:none;
-            -webkit-appearance:none;
-            -moz-appearance:none;
-            border:0;
-            background:transparent;
+        [dir="rtl"] .topbar {
+            direction: ltr;
+        }
+
+
+        .lang {
+            border: 1px solid var(--line);
+            border-radius: 999px;
+            overflow: hidden;
+            background: rgba(0, 0, 0, .08);
+        }
+
+        @media (prefers-color-scheme: light) {
+            .lang {
+                background: rgba(255, 255, 255, .55);
+            }
+        }
+
+        .lang-select {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            border: 0;
+            background: transparent;
             color: var(--muted);
-            padding: 8px 34px 8px 12px; /* جا برای فلش */
-            font-size:12px;
-            letter-spacing:.08em;
-            text-transform:uppercase;
-            cursor:pointer;
-            line-height:1;
-            outline:none;
+            padding: 8px 34px 8px 12px;
+            font-size: 12px;
+            letter-spacing: .08em;
+            text-transform: uppercase;
+            cursor: pointer;
+            line-height: 1;
+            outline: none;
         }
 
-        .lang{
-            position:relative;
+        .lang {
+            position: relative;
         }
-        .lang::after{
-            content:"▾";
-            position:absolute;
-            right:12px;
-            top:50%;
-            transform:translateY(-50%);
+
+        .lang::after {
+            content: "▾";
+            position: absolute;
+            right: 12px;
+            top: 50%;
+            transform: translateY(-50%);
             color: var(--muted);
-            pointer-events:none;
-            font-size:12px;
+            pointer-events: none;
+            font-size: 12px;
         }
 
-        @media (prefers-color-scheme: light){
-            .lang-btn[aria-pressed="true"]{
-                background: rgba(0,0,0,.06);
+        @media (prefers-color-scheme: light) {
+            .lang-btn[aria-pressed="true"] {
+                background: rgba(0, 0, 0, .06);
             }
         }
 
 
-        .row{
-            display:flex;
+        .row {
+            display: flex;
             gap: 18px;
             align-items: center;
             justify-content: space-between;
@@ -214,39 +225,44 @@
         }
 
 
-        .main{
+        .main {
             margin-top: var(--pad);
             padding-top: var(--pad);
             border-top: 1px solid var(--line);
         }
 
-        .icon{
+        .icon {
             width: 125px;
             height: 125px;
             border-radius: 14px;
-            background: linear-gradient(135deg, rgba(106,166,255,.22), rgba(106,166,255,.06));
+            background: linear-gradient(135deg, rgba(106, 166, 255, .22), rgba(106, 166, 255, .06));
             border: 1px solid var(--line);
-            display:flex;
-            align-items:center;
-            justify-content:center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             flex: 0 0 auto;
             color: #3f4043;
         }
-        .icon svg{ width: 70px; height: 70px; opacity: .9; }
+
+        .icon svg {
+            width: 70px;
+            height: 70px;
+            opacity: .9;
+        }
 
 
-        h1{
+        h1 {
             margin: 0;
             font-size: clamp(22px, 3.2vw, 34px);
             line-height: 1.15;
             letter-spacing: -0.02em;
         }
 
-        .content{
+        .content {
             padding: var(--pad);
         }
 
-        .msg{
+        .msg {
             font-size: 15.5px;
             line-height: 1.7;
             color: var(--muted);
@@ -254,55 +270,78 @@
             max-width: 64ch;
         }
 
-        .note{
+        .note {
             margin-top: 14px;
             padding: 12px 14px;
             border-radius: 14px;
             border: 1px solid var(--line);
-            background: rgba(0,0,0,.06);
+            background: rgba(0, 0, 0, .06);
             color: var(--muted);
             font-size: 14px;
             line-height: 1.6;
         }
-        @media (prefers-color-scheme: light){
-            .note{ background: rgba(255,255,255,.55); }
+
+        @media (prefers-color-scheme: light) {
+            .note {
+                background: rgba(255, 255, 255, .55);
+            }
         }
 
-        .footer{
+        .footer {
             padding: 14px var(--pad);
             border-top: 1px solid var(--line);
             color: var(--muted);
-            display:flex;
+            display: flex;
             justify-content: space-between;
             gap: 12px;
             flex-wrap: wrap;
             font-size: 13px;
         }
 
-        .dot{
-            display:inline-block;
-            width:8px;height:8px;border-radius:999px;
+        .dot {
+            display: inline-block;
+            width: 8px;
+            height: 8px;
+            border-radius: 999px;
             background: var(--accent);
-            box-shadow: 0 0 0 6px rgba(106,166,255,.12);
+            box-shadow: 0 0 0 6px rgba(106, 166, 255, .12);
             margin-right: 8px;
             transform: translateY(1px);
         }
 
-        .status{
-            display:flex;
-            align-items:center;
+        .status {
+            display: flex;
+            align-items: center;
             gap: 8px;
             white-space: nowrap;
         }
 
-        .sr-only{
-            position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border: 0;
         }
 
         /* Simple RTL support when lang is fa */
-        [dir="rtl"] body { direction: rtl; }
-        [dir="rtl"] .badge { right: auto; left: 14px; }
-        [dir="rtl"] .dot { margin-right: 0; margin-left: 8px; }
+        [dir="rtl"] body {
+            direction: rtl;
+        }
+
+        [dir="rtl"] .badge {
+            right: auto;
+            left: 14px;
+        }
+
+        [dir="rtl"] .dot {
+            margin-right: 0;
+            margin-left: 8px;
+        }
     </style>
 </head>
 
@@ -367,13 +406,14 @@
 </main>
 
 <script>
-    (function(){
+    (function () {
         const STORAGE_KEY = "mpmp_lang";
-        function getAvailableLangs(){
+
+        function getAvailableLangs() {
             return Object.keys(content).filter(k => content[k] && content[k].documentElement);
         }
 
-        function fillLangSelect(selected){
+        function fillLangSelect(selected) {
             const sel = document.getElementById("langSelect");
             if (!sel) return;
 
@@ -390,15 +430,22 @@
             sel.value = selected;
         }
 
-        function getSavedLang(){
-            try { return localStorage.getItem(STORAGE_KEY); } catch(e) { return null; }
+        function getSavedLang() {
+            try {
+                return localStorage.getItem(STORAGE_KEY);
+            } catch (e) {
+                return null;
+            }
         }
 
-        function saveLang(l){
-            try { localStorage.setItem(STORAGE_KEY, l); } catch(e) {}
+        function saveLang(l) {
+            try {
+                localStorage.setItem(STORAGE_KEY, l);
+            } catch (e) {
+            }
         }
 
-        function pickLang(){
+        function pickLang() {
             // 1) saved language overrides config
             const saved = getSavedLang();
             if (saved === "en" || saved === "fa") return saved;
@@ -411,7 +458,7 @@
             return l.startsWith("fa") ? "fa" : "en";
         }
 
-        function setAccent(accent){
+        function setAccent(accent) {
             const map = {
                 auto: null,
                 blue: "#6aa6ff",
@@ -424,14 +471,14 @@
             if (val) document.documentElement.style.setProperty("--accent", val);
         }
 
-        function setLangButtonsActive(langKey){
+        function setLangButtonsActive(langKey) {
             document.querySelectorAll(".lang-btn").forEach(btn => {
                 const isActive = btn.dataset.lang === langKey;
                 btn.setAttribute("aria-pressed", isActive ? "true" : "false");
             });
         }
 
-        function applySettings(langKey){
+        function applySettings(langKey) {
             const lang = content[langKey] || content.en;
             fillLangSelect(langKey);
 
@@ -461,7 +508,7 @@
             setLangButtonsActive(langKey);
         }
 
-        function wireLangSelect(){
+        function wireLangSelect() {
             const sel = document.getElementById("langSelect");
             if (!sel) return;
 
